adding mcp service (mostly boilerplate)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,10 @@ edition = "2021"
 [dependencies]
 actix-web = "4.11.0"
 redis = "0.32.4"
+rmcp-actix-web = "0.2"
+rmcp = "0.3"
+tokio = "1.47.1"
+serde = "1.0.219"
+serde_json = "1.0.142"
+http = "1.3.1"
+tracing = "0.1.41"
