--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ serde_json = "1.0.142"
 http = "1.3.1"
 tracing = "0.1.41"
 actix-files = "0.6.6"
+actix-jwt-auth-middleware = "0.5.0"
+ed25519-compact = "2.1.1"
+jwt-compact = { version = "0.8.0", features = ["ed25519-compact"] }
